--- a/meganhome.css
+++ b/meganhome.css
@@ -266,6 +266,10 @@ h3 {
     
     h3 {
         font-size: 18px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
     }
     
     .headerbanner {
