--- a/meganhome.css
+++ b/meganhome.css
@@ -230,6 +230,8 @@ h1 {
 
 .headerbanner {
     background-image: url("typing.jpg");
+    background-color: rgba(255, 255, 255, 0.4);
+    background-blend-mode: lighten;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
