--- a/meganhome.css
+++ b/meganhome.css
@@ -8,6 +8,7 @@ body {
 
 .topnav a.Meganhome {
     text-decoration: none;
+    color: black;
     font-family: 'Raleway', sans-serif;
     position: absolute;
     font-size: 20px;
