--- a/megancontact.css
+++ b/megancontact.css
@@ -1,10 +1,11 @@
 body {
     margin: 0;
     padding: 0;
-    max-width: 100%;
+    background-color: lightgray;
     overflow-x: hidden;
-    background-color: #f1f1f1;
+    max-width: 100%;
 }
+
 
 .topnav a.Meganhome {
     text-decoration: none;
@@ -12,7 +13,9 @@ body {
     font-family: 'Raleway', sans-serif;
     position: absolute;
     font-size: 20px;
+    font-weight: 400;
     margin-top: 3px;
+    margin-left: 40px;
 }
 
 .topnav a.Meganhome:hover {
@@ -150,11 +153,11 @@ ul.topnav li.dropdown {
     }
     
     ul.topnav li a.menu {
-    display: block;
-    text-decoration: none;
-    min-height: 15px;
-    padding-right: 12em;
-    color: black;
+        display: block;
+        text-decoration: none;
+        min-height: 15px;
+        margin-right: 15px;
+        color: black;
         
     }
 
@@ -164,147 +167,93 @@ ul.topnav li.dropdown {
 
 
 }
-/*.topnav {
-  background-color: white;
-  overflow: hidden;
-}
-
-h1 {
-    float: left;
-    font-size: 20px;
-    padding: 18px 16px;
-    margin: 0;
-}
-
-.topnav a.Meganhome {
-    text-decoration: none;
-    font-family: 'Raleway', sans-serif;
-}
-
-.topnav a.Meganhome:hover {
-    color: black;
-    transition: 0.4s;
-}
 
 
-.topnav .reversefloat {
-    float: right;
-}
 
- Style the links inside the navigation bar 
-.topnav a.menu {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 18px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  font-family: 'Raleway', sans-serif;
-}*/
+/* ############# end of navbar ############## */
 
-
-/* Change the color of links on hover */
-
-/*
-.topnav a.menu:hover {
-    color: lightgrey;
-    transition: 0.3s;
-}
-
-.topnav a:visited {
-    text-decoration: none;
-    color: black;
-}
-*/
-
-/* ################## end of nav bar ################### */
-
-
-.onlybanner {
-    background-color: #f1f1f1;
-    margin: 0;
-}
-
-.onlybanner h2 {
+.title h2 {
+    margin-bottom: -10px;
+    margin-top: -.5em;
     text-align: center;
-    font-size: 30px;
-    padding-top: 25px;
-    padding-bottom: 1.5em;
-    color: black;
-    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
 }
 
-p.headerp {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+form {
+    margin-top: 10px;
+    transition: all 1s ease-in-out;
     text-align: center;
+}
+
+.contactform {
+    margin-top: -6em;
+}
+.formcontrol {
+    width: 600px;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid black;
+    color: white;
+    font-size: 18px;
+    margin-bottom: 10px;
+    
+}
+
+form .message {
+    height: 90px;
     max-width: 600px;
-    width: 80%;
-    font-size: 16px;
-    padding-bottom: 1.5em;
-    font-family: 'Raleway', sans-serif;
+}
+button {
+    height: 45px;
 }
 
-.row {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    
-    
-}
-.col-sm-4 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-img.paper {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50px;
-    margin-top: 70px;
-    margin-bottom: 25px;
-}
-
-p.service {
-    font-size: 14px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    color: black;
-    margin-top: 18px;
-    margin-bottom: 50px;
-    max-width: 300px;
-    font-family: 'Raleway', sans-serif;
-}
-
-h3 {
-    text-align: center;
+button.submit {
+    background-color: white;
+    border-color: transparent;
+    color: gray;
     font-size: 20px;
-    color: black;
-    margin-bottom: 15px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
+    font-weight: bold;
+    letter-spacing: 2px;
+    height: 60px;
+    width: 230px;
+    margin-top: 20px;
 }
 
-h4 {
-    text-align: center;
-    font-size: 25px;
-    color: black;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-weight: 700;
+button.submit:hover {
+    background-color: lightpink;
+    transition: 0.4s;
+    cursor: pointer;
 }
 
-h5.additionalservice {
-    font-size: 13px;
-    text-align: center;
-    color: black;
-    font-family: 'Raleway', sans-serif;
+/*############ Mobile for form ############## */
+@media screen and (max-width: 650px) {
+    .formcontrol {
+        width: 75%;
+    }
+    
+    .contactform {
+        margin-top: 0;
+    }
+    
+    button.submit {
+        width: 190px;
+        height: 50px;
+    }
     
 }
+
+@media screen and (max-width: 1000px) {
+    .contactform {
+        margin-top: -1em;
+    }
+    
+}
+
+
+
+
+/* ######### end of mobile ####### */
 
 img.linkedin {
     width: 50px;
@@ -320,6 +269,3 @@ img.linkedin:hover {
     opacity: 0.3;
     transition: 0.3s;
 }
-
-/* ################# end of testimonialsbanner ############### */
-
