--- a/meganservices.css
+++ b/meganservices.css
@@ -1,324 +1,57 @@
+/* General styling */
 body {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    max-width: 100%;
-    overflow-x: hidden;
-    background-color: #f1f1f1;
-}
-
-.topnav a.Meganhome {
-    text-decoration: none;
-    color: black;
-    font-family: 'Raleway', sans-serif;
-    position: absolute;
-    font-size: 20px;
-    margin-top: 3px;
-}
-
-.topnav a.Meganhome:hover {
-    color: black;
-    transition: 0.4s;
-}
-
-.topnav a:visited {
-    text-decoration: none;
-    color: black;
-}
-
-.navbanner ul {
-    background-color: white;
-    width: 100%;
-    margin: 0;
-    overflow: hidden;
-    float: right;
-    
-}
-
-.navbanner {
-    display: grid;
-    
-}
-
-
-ul.topnav li a {
-  text-decoration: none;
-  color: black;
-  font-weight: 500;
-  
-}
-
-ul.topnav li a:hover
-{
-    color: lightgrey;
-    transition: color 0.3s ease;
-}
-
-
-.topnav .reversefloat {
-    float: right;
-}
-
-ul.topnav li {
-    list-style: none;
-    margin: 20px;
-    font-size: 17px;
-    float: left;
-    font-family: 'Raleway', sans-serif;
-    margin-top: 3px;
-}
-
-
-
-ul li.hiddenli {
-    opacity: 0;
-    cursor: default;
-}
-
-
-ul.topnav li.dropdown {
-    display: none;
-    font-size: 25px;
-}
-
-/*############ Mobile ############## */
-@media screen and (max-width: 550px) {
-    ul.topnav li:not(:nth-child(0)) {
-        display: none;
-    }
-    
-    ul.topnav li.dropdown {
-        display: block;
-        float: right;
-    }
-    
-    ul.topnav.responsive li.dropdown {
-        position: absolute;
-        top: 0;
-        right: 0;
-    }
-    
-    ul.topnav.responsive {
-        position: relative;
-        background-color: white;
-        width: 100%;
-    }
-    
-    ul.topnav.responsive li {
-        display: inline; 
-        float: none;
-        
-    }
-    
-    ul.topnav.responsive li.dropdown {
-        display: inline; 
-        float: none;
-        padding-top: 20px;
-        
-    }
-    
-    ul.topnav.responsive li a {
-        display: block;
-        text-align: center;
-    }
-    
-    ul.topnav.responsive li.hiddenli a {
-        opacity: 0;
-        cursor: default;
-    }
-    
-    .navbanner ul {
-    background-color: white;
-    width: 100%;
-    margin: 0;
-    overflow: hidden;
-    float: right;
-    
-}
-
-    ul.topnav li {
-    list-style: none;
-    float: left;
-    }
-
-    ul.topnav li a {
-    display: block;
-    text-decoration: none;
-    min-height: 15px;
-    padding-right: 5px;
-    margin-top: -5px;
-    color: black;
-    }
-    
-    ul.topnav li a.menu {
-    display: block;
-    text-decoration: none;
-    min-height: 15px;
-    padding-right: 12em;
-    color: black;
-        
-    }
-
-    ul.topnav li a:hover {
-    color: lightgray;
-    }
-
-
-}
-/*.topnav {
-  background-color: white;
-  overflow: hidden;
-}
-
-h1 {
-    float: left;
-    font-size: 20px;
-    padding: 18px 16px;
-    margin: 0;
-}
-
-.topnav a.Meganhome {
-    text-decoration: none;
-    font-family: 'Raleway', sans-serif;
-}
-
-.topnav a.Meganhome:hover {
-    color: black;
-    transition: 0.4s;
-}
-
-
-.topnav .reversefloat {
-    float: right;
-}
-
- Style the links inside the navigation bar 
-.topnav a.menu {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 18px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  font-family: 'Raleway', sans-serif;
-}*/
-
-
-/* Change the color of links on hover */
-
-/*
-.topnav a.menu:hover {
-    color: lightgrey;
-    transition: 0.3s;
-}
-
-.topnav a:visited {
-    text-decoration: none;
-    color: black;
-}
-*/
-
-/* ################## end of nav bar ################### */
-
-
-.onlybanner {
-    background-color: #f1f1f1;
-    margin: 0;
-}
-
-.onlybanner h2 {
-    text-align: center;
-    font-size: 30px;
-    padding-top: 25px;
-    padding-bottom: 1.5em;
-    color: black;
-    font-family: 'Raleway', sans-serif;
-}
-
-p.headerp {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    max-width: 600px;
-    width: 80%;
-    font-size: 16px;
-    padding-bottom: 1.5em;
-    font-family: 'Raleway', sans-serif;
+    background-color: #f4f4f4;
 }
 
 .row {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
-    
-    
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 20px 0;
 }
+
 .col-sm-4 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-img.paper {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50px;
-    margin-top: 70px;
-    margin-bottom: 25px;
-}
-
-p.service {
-    font-size: 14px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    flex: 0 0 30%; /* This gives the column a width of roughly 1/3 (minus margins for spacing) */
+    box-sizing: border-box;
+    margin: 10px;
+    background-color: #ffffff;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
     text-align: center;
-    color: black;
-    margin-top: 18px;
-    margin-bottom: 50px;
-    max-width: 300px;
-    font-family: 'Raleway', sans-serif;
 }
 
-h3 {
-    text-align: center;
-    font-size: 20px;
-    color: black;
-    margin-bottom: 15px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
-}
-
-h4 {
-    text-align: center;
-    font-size: 25px;
-    color: black;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-weight: 700;
-}
-
-h5.additionalservice {
-    font-size: 13px;
-    text-align: center;
-    color: black;
-    font-family: 'Raleway', sans-serif;
-    
-}
-
-img.linkedin {
-    width: 50px;
+.package-icon {
+    max-width: 100px;
+    height: auto;
+    margin: 0 auto;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10em;
-    margin-bottom: 1em;
-    
 }
 
-img.linkedin:hover {
-    opacity: 0.3;
-    transition: 0.3s;
+.package-title {
+    color: #333;
+    margin: 10px 0;
+}
+
+.package-price {
+    color: #666;
+    margin: 10px 0;
+    font-weight: bold;
+}
+
+.package-description {
+    color: #777;
+    font-size: 0.9em;
+}
+
+/* Optional: Add hover effect to columns */
+.col-sm-4:hover {
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    transform: translateY(-3px);
+    transition: all 0.3s ease;
 }
 
 /* ################# end of testimonialsbanner ############### */
